gap fix

--- a/cssfiles/style.css
+++ b/cssfiles/style.css
@@ -21,7 +21,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 0.5rem;
+  gap: 1rem;
   backdrop-filter: brightness(75%);
 }
 
